tests/examples/good/misc/good013.lat
int main() {
    int i = 10;
    while (i >= 0) {
        printInt(i);
        i--;
    }
    return 0;
}
