tests/examples/bad/class_self_keyword_override_05.lat
int main() {
    return 0;
}
 
class self {
    int f() {
   
        return 0;
    }
}

